# byteserde

./: .gitignore  Cargo.toml  LICENSE.md  dev.md  readme.md
.github/workflows/: publish_crates.io.yml  pull-request-stable.yml  pull-request.yml  push-feature-branch-nightly.yml  push-feature-branch-stable.yml  push-feature-branch.yml  push-master-stable.yml  push-master.yml  push-non-master.yml  test_snapshot.yml  workflow-test.yml
benches/: perf_bug_bench.rs  struct_ser_des_bench.rs
byteserde/: Cargo.toml
byteserde/src/: des.rs  des_bytes.rs  des_slice.rs  error.rs  lib.rs  prelude.rs  ser.rs  ser_heap.rs  ser_stack.rs  size.rs
byteserde/src/utils/: hex.rs
byteserde/src/utils/numerics/: be_bytes.rs  le_bytes.rs  mod.rs  ne_bytes.rs
byteserde/src/utils/strings/utf8/: mod.rs
byteserde/tests/: test_byteserde.rs
byteserde/tests/des/: deserializer.rs  numerics.rs  strings.rs
byteserde/tests/des_bytes/: deserializer.rs  numerics.rs  strings.rs
byteserde/tests/des_slice/: deserializer.rs  mod.rs  numerics.rs  strings.rs
byteserde/tests/integrationtest/setup/log/: mod.rs
byteserde/tests/ser/: mod.rs  numerics.rs  serializer.rs  strings.rs
byteserde_derive/: Cargo.toml
byteserde_derive/src/: attr_struct.rs  common.rs  enum_attr.rs  enum_map.rs  lib.rs  named.rs  option_attr.rs  struct_shared.rs  tokens_enum.rs  tokens_struct.rs  unnamed.rs  validate_struct.rs
byteserde_derive/tests/: test_trybuild.rs
byteserde_derive/tests/error_scenarios/: option.rs  option.stderr  panic_enum.stderr  panic_size_of_vec.rs  panic_size_of_vec.stderr  panic_struct_unit.stderr  panic_union.stderr  size_of_vec.rs  size_of_vec.stderr  struct_unit.rs  struct_unit.stderr  union.rs  union.stderr
byteserde_examples/: Cargo.toml  readme.md
byteserde_examples/benches/: byteserde_bench.rs  byteserde_full_bench.rs  common.rs  sample.rs  serde_bincode_bench.rs  serde_json_bench.rs  serde_rmp_bench.rs  struct_ser_des_bench.rs
byteserde_examples/examples/: arr_regular.rs  arr_tuple.rs  enum_like_tuple.rs  enum_like_unit.rs  enum_tuple.rs  generics_regular.rs  generics_tuple.rs  numeric_optional_regular.rs  numeric_regular.rs  numeric_tuple.rs  option_regular.rs  optional_regular.rs  practical_regular.rs  practical_tuple.rs  readme.md  strings_fix_len_regular.rs  strings_fix_len_tuple.rs  strings_regular.rs  strings_tuple.rs  strings_var_len_regular.rs  strings_var_len_tuple.rs  test.rs  unit.rs  vec_regular.rs  vec_tuple.rs
byteserde_types/: Cargo.toml
byteserde_types/src/: lib.rs  prelude.rs
byteserde_types/src/macros/: mod.rs
byteserde_types/src/strings/ascii/: mod.rs
byteserde_types/src/utils/strings/ascii/: mod.rs
examples/: mod.rs  readme.md
examples/usecases/: arr_regular.rs  arr_tuple.rs  generics_regular.rs  generics_tuple.rs  numeric_regular.rs  numeric_tuple.rs  practical_regular.rs  practical_tuple.rs  primitive_tuple.rs  strings_regular.rs  strings_tuple.rs  vec_regular.rs  vec_tuple.rs
readme/: packaging_and_publishing.md
src/: des.rs  error.rs  lib.rs  prelude.rs  ser.rs
src/utils/: mod.rs
src/utils/numerics/: be_bytes.rs  le_bytes.rs  ne_bytes.rs
src/utils/strings/: mod.rs
src/utils/strings/ascii/: mod.rs
src/utils/strings/utf8/: mod.rs
test_suite/: Cargo.toml
test_suite/examples/: mod.rs
test_suite/examples/usecases/: numeric_regular.rs  strings_regular.rs  vec_regular.rs
tests/: des_deserializer_test.rs  des_numerics_test.rs  des_strings_test.rs  mod.rs  scratchpad.rs  ser_des_struct_test.rs  ser_numerics_test.rs  ser_serializer_test.rs  ser_strings_test.rs
tests/byteserde_derive/: generics_regular.rs  generics_tuple.rs  length_replace_regular.rs  length_replace_tuple.rs  primitive_regular.rs  primitive_tuple.rs  struct_regular_generics.rs  struct_regular_length_replace.rs  struct_regular_native_types.rs  struct_tuple_generics.rs  struct_tuple_length_replace.rs  struct_tuple_native_types.rs  usecases_test.rs
tests/byteserde_derive/error_scenarios/: panic_enum.stderr  panic_struct_unit.stderr  panic_union.stderr
tests/byteserde_derive/scenarios/: panic_enum.rs  panic_enum.stderr  panic_struct_unit.stderr  panic_union.stderr  pass_struct_regular_generics.rs  pass_struct_regular_length_replace.rs  pass_struct_regular_native_types.rs  pass_struct_tuple_generics.rs  pass_struct_tuple_length_replace.rs  pass_struct_tuple_native_types.rs
tests/des/: deserializer.rs  mod.rs  numerics.rs  strings.rs
tests/ser/: mod.rs  numerics.rs  serializer.rs  strings.rs
