[workspace]
members = [
    "byteserde",
    "byteserde_derive",
    "byteserde_types",
    "byteserde_examples",
]
resolver = "2"

[workspace.package]
# NOTE remember to update this and below [workspace.dependencies] for byteserde and byteserde_derive for the release
version = "0.6.1"
authors = ["Softstream <softstream.link@gmail.com>"]
readme = "readme.md"
license-file = "LICENSE"
edition = "2021"
rust-version = "1.69"
repository = "https://github.com/softstream-link/byteserde"
keywords = ["serde", "bytes", "serialization", "derive"]
categories = ["encoding"]

[workspace.dependencies]
# workspace members
byteserde = { version = "0.6.1", path = "./byteserde" }
byteserde_derive = { version = "0.6.1", path = "./byteserde_derive" }
byteserde_types = { version = "0.6.1", path = "./byteserde_types" }


bytes = "1.4"

syn = { version = "2.0", features = [
    "full",
    "extra-traits",
] } # byteserde_derive
quote = "1.0" # byteserde_derive

# unit testing
text-diff = "0.4"
env_logger = "0.10"
log = "0.4"
serde = "1.0"       # macros some macros in byte_types spit out custom serde json serialization
serde_json = "1.0"  # macros some macros in byte_types spit out custom serde json serialization

# used in benchmarking
serde_derive = "1.0"
rmp-serde = "1.1"
bincode = "1.3"

# byteserde_derive
trybuild = { version = "1.0", features = ["diff"] }
