[package]
name = "byteserde"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "A generic serialization/deserialization framework for mapping byte streams to/from arbitrary struct types with focus on performance."


[dev-dependencies]
text-diff = "0.4"
env_logger = "0.10"
log = "0.4"
