[package]
name = "byteserde"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "A generic serialization/deserialization framework for mapping byte streams to/from arbitrary struct types with focus on performance."

[dependencies]
bytes = { workspace = true }

[dev-dependencies]
text-diff = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
