[package]
name = "byteserde_derive"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "A procedural macro for mapping byte streams to/from arbitrary struct types with focus on performance"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full" , "extra-traits"] }
quote = "1.0"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
env_logger = "0.10"
log = "0.4"
byteserde = { path = "../byteserde" }