[package]
name = "byteserde_derive"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "A procedural macro for mapping byte streams to/from arbitrary struct types with focus on performance"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }

[dev-dependencies]
byteserde = { path = "../byteserde" }
trybuild = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }