[package]
name = "byteserde_examples"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

publish = false

[dependencies]
byteserde = { path = "./../byteserde" }
byteserde_derive = { path = "./../byteserde_derive" }
byteserde_types = { path = "./../byteserde_types"}



[[bench]]
name = "byteserde_full_bench"
harness = false

[[bench]]
name = "byteserde_bench"
harness = false


[[bench]]
name = "serde_json_bench"
harness = false

[[bench]]
name = "serde_rmp_bench"
harness = false

[dev-dependencies]
criterion = "0.5"
env_logger = "0.10" 
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rmp-serde = "1.1"
