[package]
name = "byteserde_types"
version = "0.1.1"
edition = "2021"
authors = ["Softstream <softstream.link@gmail.com>"]
license-file = "../LICENSE"
description = "A procedural macro for mapping byte streams to/from arbitrary struct types with focus on performance"
repository = "https://github.com/softstream-link/byteserde"
readme = "../readme.md"
keywords = [ "serde", "bytes", "serialization", "derive" ]
categories = ["encoding"]
rust-version = "1.69"


[dependencies]
byteserde_derive = {path = "../byteserde_derive", version = "1.1"}
byteserde = {path = "../byteserde", version = "1.1"}

[dev-dependencies]
env_logger = "0.10"
log = "0.4"