[package]
name = "byteserde_types"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "A procedural macro for mapping byte streams to/from arbitrary struct types with focus on performance"

[dependencies]
byteserde_derive = {path = "../byteserde_derive", version = "0.1"}
byteserde = {path = "../byteserde", version = "0.1"}

[dev-dependencies]
env_logger = "0.10"
log = "0.4"