[package]
name = "byteserde_types"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "A procedural macro for mapping byte streams to/from arbitrary struct types with focus on performance"

[dependencies]
byteserde_derive = { workspace = true }
byteserde = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true } # for macros that generate serde serialization
